[tool.poetry]
name = "cppfug"
version = "0.1.0"
description = "C++ project management utilities."
authors = ["Rauli Laine <rauli.laine@iki.fi>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cppfug = "cppfug.__main__:main"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
pathvalidate = "^3.2.0"
pygit2 = "^1.13.3"
jinja2 = "^3.1.2"
case-convertor = "^1.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-black = "^0.3.12"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --black --cov=cppfug --cov-report=term-missing"
testpaths = ["cppfug"]
